[docs] fix jumpy scrolling into view

--- a/tools/docs/src/style.sass
+++ b/tools/docs/src/style.sass
@@ -83,9 +83,6 @@ ul.links-list
   background-color: #dddddd
   margin: 1rem 0
 
-h3[id]
-  scroll-margin: 20px
-
 ul.module-toc-list
   columns: 200px 4
   list-style: none
